# pyomg

./: .gitignore  README.md  pyproject.toml
omg/: __main__.py  cli.py  conftest.py
omg/brainz/: __init__.py  aliases.py  api.py  conftest.py  model.py  ngs.py  source.py  test_api.py  test_ngs.py
omg/collection/: __init__.py  builder.py  conftest.py  entities.py  store.py  test_builder.py
omg/files/: __init__.py  cli.py  db_updater.py  filesystem.py  sqlite.py  tags.py  test_filesystem.py  test_sqlite.py  test_walker.py  walker.py
omg/test_utils/: mbids.py
omg/util/: dates.py
